--- a/mainApp/templates/mainApp/carrier_trips.html
+++ b/mainApp/templates/mainApp/carrier_trips.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 {% load static %}
 {% block content %}
-<div class="main-wrapper">
+<div class="main-wrapper bg-white">
 
     <div class="main-wrapper_ref-section">
       <a href="{% url 'create_trip' %}" class="{% if request.path == '/create_trip/' %}active{% endif %}">
