--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <div class="main-wrapper  showBlock">
+    <div class="main-wrapper  bg-white showBlock">
       <div class="form-fixed-top">
         <form method="get" action="{% url 'search_tickets' %}">
           {% csrf_token %}
