--- a/mainApp/templates/mainApp/base.html
+++ b/mainApp/templates/mainApp/base.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="mainContainer">
-    <nav class="header">
+    <nav class="header bg-primary">
       <div class="container">
         <div class="left-menu">
           <a href="{% url 'home' %}">
