--- a/mainApp/templates/mainApp/profile.html
+++ b/mainApp/templates/mainApp/profile.html
@@ -1,20 +1,144 @@
-{% extends "mainApp/base.html" %}
-{% load crispy_forms_tags %}
-{% block content %}
-    <div class="content-section">
-      <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-        <div class="media-body flex">
-          <h2 class="account-heading">Wellcome, {{ user.username }}!</h2>
+<!DOCTYPE html>
+{% load static %}
+<html>
 
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+  <title>bosfor.ua</title>
+</head>
+
+<body>
+  <div class="mainContainer">
+    <nav class="header bg-white shadow-small">
+      <div class="container">
+        <div class="left-menu">
+          <a href="{% url 'home' %}">
+            <img src="{% static 'img/logo_white.png' %}" alt="Logo" class="logo" />
+          </a>
+        </div>
+        <div class="right-menu">
+          <a href="#" class="menu-item menu-item__fn-black">
+            <i class="fas fa-headset"></i>
+            <span>Служба підтримки</span>
+          </a>
+         {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="menu-item menu-item__fn-black">
+              <i class="fas fa-sign-out-alt"></i>
+              <span>Вихід</span>
+            </a>
+          {% else %}
+            <a href="{% url 'register' %}" class="menu-item menu-item__fn-black">
+              <i class="fas fa-user"></i>
+              <span>Особистий кабінет</span>
+            </a>
+          {% endif %}
         </div>
       </div>
-        <div class="flexSpaceBetween">
-            <a  href="#">Все объявления</a>
 
+        <div class="profile-wrapper_ref-section">
+          <a href="{% url 'profile' %}" class="subtitle-base {% if request.path == '/profile/' %}active{% endif %}">
+            <h4>Майбутні поїздки</h4>
+          </a>
+          <a href="{% url 'carrier_trips' %}" class="subtitle-base {% if request.path == '/carrier_trips/' %}active{% endif %}">
+            <h4>Мої поїздки</h4>
+          </a>
+              <a href="{% url 'create_trip' %}" class="subtitle-base {% if request.path == '/create_trip/' %}active{% endif %}">
+            <h4>Контактна інформація</h4>
+          </a>
+          <a href="{% url 'carrier_trips' %}" class="subtitle-base {% if request.path == '/carrier_trips/' %}active{% endif %}">
+            <h4>Відгуки</h4>
+          </a>
         </div>
+      </nav>
+      <div class="flex-column__center mrg-t50 ">
+          <div class="title-base section-title">
+              У вас поки немає майбутніх поїздок, {{ user.username }}
+          </div>
+            <div class="title-subbase section-subtitle">
+              Щоб знайти квитки на автобус, виберіть напрямок, дату поїздки та кількість пасажирів
+          </div>
+      </div>
+<div class="main-wrapper__profile  bg-white shadow-small {% if request.resolver_match.url_name == 'my_trips' %}non-display{% endif %}">
+      <div class="form-section__profile ">
+
+        <form method="post" action="{% url 'my_trips' %}">>
+          {% csrf_token %}
+          <div class="form-fields">
+            {% for field in form %}
+            <div class="form-row{% if forloop.first %} first{% endif %}">
+              {{ field.label_tag }}
+              {{ field }}
+              {{ field.errors }}
+            </div>
+            {% endfor %}
+          </div>
+          <div class="form-submit">
+            <div class="form-button-row">
+              <button type="submit" class="btn btn-primary">🔍 Знайти квитки</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="main-wrapper  showBlock">
+      <div class="form-fixed-top">
+        <form method="get" action="{% url 'search_tickets' %}">
+          {% csrf_token %}
+          <div class="form-fields">
+            {% for field in search_form_top %}
+            <div class="form-row{% if forloop.first %} first{% endif %}">
+              {{ field.label_tag }}
+              {{ field }}
+              {{ field.errors }}
+            </div>
+            {% endfor %}
+          </div>
+          <div class="form-submit">
+            <div class="form-submit">
+              <button type="submit" class="btn  btn-primar">🔍 Знайти квитки</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="content-section">
+
     </div>
  <div class="main">
+    {% block content %}
 
+
+    {% endblock %}
     </div>
-{% endblock content %}
+
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const formWrapperTop = document.querySelector('.form-fixed-top');
+      const wrapper = document.querySelector('.showBlock');
+
+      function checkPosition() {
+        const rect = wrapper.getBoundingClientRect();
+
+        if (rect.top <= 0) {
+          formWrapperTop.classList.add('visible');
+        } else {
+          formWrapperTop.classList.remove('visible');
+        }
+      }
+
+      window.addEventListener('scroll', checkPosition);
+      window.addEventListener('resize', checkPosition);
+    });
+  </script>
+</body>
+
+</html>
