--- a/mainApp/static/css/styles.css
+++ b/mainApp/static/css/styles.css
@@ -199,7 +199,8 @@ body{
   align-items: center;
 }
 
-.form-fields{
+.form-fields,
+.form-fields-top{
       display: flex;
       flex: 0 0 80%;
       background: var(--color-white);
@@ -210,18 +211,23 @@ body{
 }
 
 
-.form-submit {
+.form-submit,
+ .form-submit-top{
     flex: 1;
 }
 
 .form-fields,
-.form-submit{
+.form-fields-top,
+.form-submit
+.form-submit-top{
     height:100%;
 }
 
 
 .form-row,
-.form-button-row{
+.form-button-row,
+.form-row-top,
+.form-button-row-top{
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -229,17 +235,20 @@ body{
 
 }
 
-.form-fields .form-row:first-child {
+.form-fields .form-row:first-child,
+ .form-fields-top .form-row:first-child{
     border-left: none;
 }
 
-.form-row{
+.form-row,
+.form-row-top{
     width:25%;
     height:100%;
     border-left:1px solid grey;
 }
 
-.form-row label {
+.form-row label,
+ .form-row-top label{
     margin-left:10px;
     font-weight: 200;
     margin-bottom: 8px;
@@ -249,7 +258,9 @@ body{
 }
 
 .form-row select,
-.form-row input {
+.form-row input,
+.form-row-top select,
+.form-row-top input{
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 6px;
@@ -1399,9 +1410,16 @@ border-radius: 0 0 6px 6px;
 }
 
 @media (max-width: 1100px) {
+    .main-wrapper__mobile,
     .main-wrapper__profile {
-       height:550px;
+       height:570px;
     }
+     .main-wrapper__mobile{
+        padding-top: 0px;
+    }
+
+
+    .form-section form,
      .form-section__profile form{
       display: flex;
       flex-direction:column;
@@ -1416,19 +1434,19 @@ border-radius: 0 0 6px 6px;
       flex-direction:column;
       flex: 0 0 100%;
       background: var(--color-white);
-      border-radius: 3px;
+      border-radius: 1px;
       box-sizing: border-box;
 }
 
 
 .form-fields,
-.form-submit{
+ .form-submit{
    width:100%;
    height:auto;
 }
 
 
-.form-row{
+ .form-row{
     width:100%;
     height:100%;
     border-bottom:1px solid grey;
