--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -1,7 +1,7 @@
 {% extends "mainApp/base.html" %}
 {% load static %}
 {% block content %}
- <div class="main-wrapper  bg-primary">
+ <div class="main-wrapper  bg-primary main-wrapper__mobile">
       <div class=" form-section">
         <form method="post">
           {% csrf_token %}
@@ -27,17 +27,17 @@
       <div class="form-fixed-top">
         <form method="get" action="{% url 'search_tickets' %}">
           {% csrf_token %}
-          <div class="form-fields">
+          <div class="form-fields-top">
             {% for field in search_form_top %}
-            <div class="form-row{% if forloop.first %} first{% endif %}">
+            <div class="form-row-top{% if forloop.first %} first{% endif %}">
               {{ field.label_tag }}
               {{ field }}
               {{ field.errors }}
             </div>
             {% endfor %}
           </div>
-          <div class="form-submit">
-            <div class="form-submit">
+          <div class="form-submit-top">
+            <div class="form-submit-top">
               <button type="submit" class="btn  btn-primar">🔍 Знайти квитки</button>
             </div>
           </div>
