--- a/mainApp/static/css/styles.css
+++ b/mainApp/static/css/styles.css
@@ -48,7 +48,7 @@ body{
     display:flex;
     flex-direction: column;
     justify-content:center;
-     align-items: center-start;
+     align-items: flex-start;
 }
 .flex-column__center{
     display:flex;
@@ -228,7 +228,6 @@ body{
 .form-button-row,
 .form-row-top,
 .form-button-row-top{
-    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -513,7 +512,7 @@ body{
 }
 
 .dotua-container-col a{
-    text-decoration:none; !important;
+    text-decoration:none !important;
 }
 
 @media (max-width: 1200px) {
@@ -945,10 +944,19 @@ border-radius: 0 0 6px 6px;
 }
 
 .btn-price-desktop,
-.price-desktop{
+.price-desktop,
+.count_passengers-mobile{
    display: flex;
 }
 
+.btn-left-price a,
+.btn-left-price a:link,
+.btn-left-price a:visited,
+.btn-left-price a:hover,
+.btn-left-price a:active {
+  text-decoration: none !important;
+  color: var(--color-white);
+}
 .price-desktop{
    justify-content: flex-end;
    align-items: flex-end;
@@ -1012,7 +1020,8 @@ border-radius: 0 0 6px 6px;
 
     .btn-price-desktop,
     .price-desktop,
-    .vertical-dashed-line {
+    .vertical-dashed-line,
+    .count_passengers-mobile{
         display: none;
     }
 
@@ -1436,22 +1445,28 @@ border-radius: 0 0 6px 6px;
       background: var(--color-white);
       border-radius: 1px;
       box-sizing: border-box;
-}
+    }
+    .form-submit{
+      margin-left:-10px;
+    }
+    .btn{
+       border-radius: 0 0 6px 6px;
+    }
 
 
-.form-fields,
- .form-submit{
-   width:100%;
-   height:auto;
-}
+    .form-fields,
+     .form-submit{
+       width:100%;
+       height:auto;
+    }
 
 
- .form-row{
-    width:100%;
-    height:100%;
-    border-bottom:1px solid grey;
-      border-left:none;
-}
+     .form-row{
+        width:100%;
+        height:100%;
+        border-bottom:1px solid grey;
+          border-left:none;
+    }
 }
 
 
