--- a/mainApp/templates/mainApp/profile_future_trips.html
+++ b/mainApp/templates/mainApp/profile_future_trips.html
@@ -96,21 +96,22 @@
                                     </div>
                                     <div class="subtitle-base">грн.</div>
                                 </div>
-                    <div class="flex-column">
-                                <form method="POST" action="{% url 'my_trips' %}">
-                                  {% csrf_token %}
-                                  <input type="hidden" name="trip_id" value="{{ trip.id }}">
-                                  <input type="hidden" name="route_id" value="{{ route_list.0.route.id }}">
+                                 <div class="flex-column">
+                                    <form method="POST" action="{% url 'my_trips' %}">
+                                      {% csrf_token %}
+                                      <input type="hidden" name="trip_id" value="{{ trip.id }}">
+                                      <input type="hidden" name="route_id" value="{{ route_list.0.route.id }}">
+                                        <input type="hidden" name="count_passenger" value="{{ count_passenger }}">
 
-                                  <button type="submit" class="btn-left-price">
-                                    <span class="btn-price-desktop">
-                                      Обрати
-                                    </span>
-                                    <span class="btn-price-mobile">
-                                      {{ route_list.0.route.price_travel }} грн.
-                                    </span>
-                                  </button>
-                                </form>
+                                      <button type="submit" class="btn-left-price">
+                                        <span class="btn-price-desktop">
+                                          Обрати
+                                        </span>
+                                        <span class="btn-price-mobile">
+                                          {{ route_list.0.route.price_travel }} грн.
+                                        </span>
+                                      </button>
+                                    </form>
                                  <div class="detail-trip-subtitle red-title">
                                             {{ trip.free_count_passengers  }} місця
                                 </div>
